force-app/main/default/objects/Opportunity_Track__c/Opportunity_Track__c.object-meta.xml
<CustomObject>
    <label>Opportunity Track</label>
    <nameField>
        <label>Customer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Track</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>