force-app/main/default/objects/Opportunity_Track__c/fields/BD_Contact__c.field-meta.xml
<CustomField>
    <fullName>BD_Contact__c</fullName>
    <label>BD Contact</label>
    <length>40</length>
    <type>Text</type>
</CustomField>