force-app/main/default/objects/Opportunity_Track__c/fields/BHQ__c.field-meta.xml
<CustomField>
    <fullName>BHQ__c</fullName>
    <label>BHQ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Energy</fullName>
                <default>true</default>
                <label>Energy</label>
            </value>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>Life</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>