force-app/main/default/objects/Opportunity_Track__c/fields/Chance__c.field-meta.xml
<CustomField>
    <fullName>Chance__c</fullName>
    <label>Chance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>