force-app/main/default/objects/Opportunity_Track__c/fields/DXP_Proposal_Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>DXP_Proposal_Ref_Number__c</fullName>
    <label>DXP Proposal Ref Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>