force-app/main/default/objects/Opportunity_Track__c/fields/Estimated_Value_Project__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Value_Project__c</fullName>
    <label>Estimated Value (Project)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>