force-app/main/default/objects/Opportunity_Track__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <formula>IF((!ISBLANK(Forecast__c )) ,IF((AND((AND((DAY(Forecast__c )&gt;=1),(MONTH(Forecast__c)&gt;=4))))),&apos;FY&apos;+TEXT(YEAR(Forecast__c)-((FLOOR((YEAR(Forecast__c)/100)))*100)), &apos;FY&apos;+TEXT((YEAR(Forecast__c)-((FLOOR((YEAR(Forecast__c)/100)))*100))-1)), &apos;No Forecast&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Year</label>
    <type>Text</type>
</CustomField>