force-app/main/default/objects/Opportunity_Track__c/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <label>Forecast</label>
    <type>Date</type>
</CustomField>