force-app/main/default/objects/Opportunity_Track__c/fields/Hosting__c.field-meta.xml
<CustomField>
    <fullName>Hosting__c</fullName>
    <label>Hosting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YDX</fullName>
            </value>
            <value>
                <fullName>Y-Azure</fullName>
            </value>
            <value>
                <fullName>Y-AWS</fullName>
            </value>
            <value>
                <fullName>Customer Cloud</fullName>
            </value>
            <value>
                <fullName>on Premises</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>