force-app/main/default/objects/Opportunity_Track__c/fields/Local_Estimated_Value_PoC__c.field-meta.xml
<CustomField>
    <fullName>Local_Estimated_Value_PoC__c</fullName>
    <label>Local Estimated Value (PoC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>