force-app/main/default/objects/Opportunity_Track__c/fields/OneSMS_OpportunityID__c.field-meta.xml
<CustomField>
    <fullName>OneSMS_OpportunityID__c</fullName>
    <label>OneSMS OpportunityID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>