force-app/main/default/objects/Opportunity_Track__c/fields/Opportunity_Info__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Info__c</fullName>
    <label>Opportunity Info</label>
    <length>25</length>
    <type>Text</type>
</CustomField>