force-app/main/default/objects/Opportunity_Track__c/fields/Opportunity_Start__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Start__c</fullName>
    <label>Opportunity Start</label>
    <type>Date</type>
</CustomField>