force-app/main/default/objects/Opportunity_Track__c/fields/Rough_Business_Volume__c.field-meta.xml
<CustomField>
    <fullName>Rough_Business_Volume__c</fullName>
    <label>Rough Business Volume</label>
    <length>40</length>
    <type>Text</type>
</CustomField>