force-app/main/default/objects/Opportunity_Track__c/fields/SaaS_Revenue__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Revenue__c</fullName>
    <label>SaaS Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>