force-app/main/default/objects/Opportunity_Track__c/fields/Sales_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contact__c</fullName>
    <label>Sales Contact</label>
    <length>40</length>
    <type>Text</type>
</CustomField>