force-app/main/default/objects/Opportunity_Track__c/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <label>Sales Region</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YAU</fullName>
            </value>
            <value>
                <fullName>YCA</fullName>
            </value>
            <value>
                <fullName>YCN</fullName>
            </value>
            <value>
                <fullName>YEA</fullName>
            </value>
            <value>
                <fullName>YEF</fullName>
            </value>
            <value>
                <fullName>YIL</fullName>
            </value>
            <value>
                <fullName>YKO</fullName>
            </value>
            <value>
                <fullName>YMA</fullName>
            </value>
            <value>
                <fullName>YRU</fullName>
            </value>
            <value>
                <fullName>YSA</fullName>
            </value>
            <value>
                <fullName>YLQ</fullName>
            </value>
            <value>
                <fullName>YLM</fullName>
            </value>
            <value>
                <fullName>YWS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>