force-app/main/default/objects/Opportunity_Track__c/fields/Sales_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Status__c</fullName>
    <label>Sales Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead/Demand</fullName>
            </value>
            <value>
                <fullName>Proposed</fullName>
            </value>
            <value>
                <fullName>Exploration</fullName>
            </value>
            <value>
                <fullName>Marketing Activities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>