force-app/main/default/objects/Opportunity_Track__c/fields/Sub_Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sub_Sales_Region__c</fullName>
    <label>Sub Sales Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>yru</fullName>
            </value>
            <value>
                <fullName>SubYLQ1</fullName>
            </value>
            <value>
                <fullName>ylm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>